--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html><head><title>Market Maze</title></head><body><h1>Market Maze Game</h1></body></html>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Market Maze</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <script src="game.js"></script>
+  <h1>Loading Market Maze...</h1>
+</body>
+</html>
